--- a/rollbar_dart/pubspec.yaml
+++ b/rollbar_dart/pubspec.yaml
@@ -3,7 +3,7 @@ description: Connect your Dart applications to Rollbar for error reporting.
 version: 1.3.1
 homepage: https://www.rollbar.com
 documentation: https://docs.rollbar.com/docs/flutter#dart
-repository: https://github.com/rollbar/rollbar-flutter
+repository: https://github.com/cymerman/rollbar-flutter
 
 environment:
   sdk: '>=2.17.0 <3.0.0'
@@ -14,7 +14,11 @@ dependencies:
   sqlite3: ^1.7.0
   collection: ^1.16.0
   stack_trace: ^1.10.0
-  rollbar_common: ^1.1.0
+  rollbar_common:
+    git:
+      url: https://github.com/cymerman/rollbar-flutter
+      path: rollbar_common
+      ref: main
 
 dependency_overrides:
   rollbar_common:
