--- a/rollbar_flutter/pubspec.yaml
+++ b/rollbar_flutter/pubspec.yaml
@@ -3,7 +3,7 @@ description: Connect your Flutter applications to Rollbar for error reporting.
 version: 1.5.0
 homepage: https://www.rollbar.com
 documentation: https://docs.rollbar.com/docs/flutter#flutter
-repository: https://github.com/rollbar/rollbar-flutter
+repository: https://github.com/cymerman/rollbar-flutter
 
 environment:
   sdk: '>=2.17.0 <4.0.0'
@@ -15,8 +15,16 @@ dependencies:
   meta: ^1.7.0
   connectivity_plus: ^4.0.0
   sqlite3_flutter_libs: ^0.5.12
-  rollbar_common: ^1.1.0
-  rollbar_dart: ^1.3.0
+  rollbar_common:
+    git:
+      url: https://github.com/cymerman/rollbar-flutter
+      path: rollbar_common
+      ref: main
+  rollbar_dart:
+    git:
+      url: https://github.com/cymerman/rollbar-flutter
+      path: rollbar_dart
+      ref: main
 
 dependency_overrides:
   rollbar_common:
